<?xml version="1.0"?>
<package format="3">
  <name>neuflow_v2</name>
  <version>0.0.0</version>
  <description>Real-time optical flow inference using NeuFlow v2 and TensorRT acceleration.</description>
  <maintainer email="your@email.com">Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>